--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>cloud-zjx-provider</module>
 		<module>cloud-zjx-ribbon</module>
 		<module>cloud-zjx-feign</module>
+		<module>cloud-zjx-ribbon-hystrix</module>
     <module>test</module>
   </modules>
 
