--- a/cloud-zjx-config-client/src/main/resources/bootstrap.properties
+++ b/cloud-zjx-config-client/src/main/resources/bootstrap.properties
@@ -1,8 +1,10 @@
 server.port=8769
 spring.application.name=cloud-zjx-config-client
 
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
-
 spring.cloud.config.label=master
 spring.cloud.config.profile=dev
-spring.cloud.config.uri=http://localhost:8768/
+#spring.cloud.config.uri=http://localhost:8768/
+
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+spring.cloud.config.discovery.enabled=true
+spring.cloud.config.discovery.serviceId=cloud-zjx-config-server
