--- a/cloud-zjx-config-client/src/main/resources/bootstrap.properties
+++ b/cloud-zjx-config-client/src/main/resources/bootstrap.properties
@@ -1,4 +1,4 @@
-server.port=8769
+server.port=8770
 spring.application.name=cloud-zjx-config-client
 
 spring.cloud.config.label=master
@@ -8,3 +8,12 @@ spring.cloud.config.profile=dev
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 spring.cloud.config.discovery.enabled=true
 spring.cloud.config.discovery.serviceId=cloud-zjx-config-server
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
+spring.cloud.bus.enabled=true
+spring.cloud.bus.trace.enabled=true
+management.endpoints.web.exposure.include=bus-refresh
