--- a/cloud-zjx-provider-zipkin/pom.xml
+++ b/cloud-zjx-provider-zipkin/pom.xml
@@ -2,12 +2,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.zjx</groupId>
-	<artifactId>cloud-zjx-provider</artifactId>
+	<artifactId>cloud-zjx-provider-zipkin</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>cloud-zjx-provider</name>
-	<description>server provider</description>
+	<name>cloud-zjx-provider-zipkin</name>
+	<description>server provider zipkin</description>
 
 	<parent>
 		<groupId>com.zjx</groupId>
