Zipkin服务追踪修改

--- a/cloud-zjx-provider-zipkin/src/main/resources/application.properties
+++ b/cloud-zjx-provider-zipkin/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8081
-spring.application.name=cloud-zjx-provider
+spring.application.name=cloud-zjx-provider-zipkin
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
