改成Spring Boot2.0.1, Finchley.SR1

--- a/cloud-zjx-eureka-cluster/src/main/resources/application-peer1.yml
+++ b/cloud-zjx-eureka-cluster/src/main/resources/application-peer1.yml
@@ -9,3 +9,5 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://peer2:8769/eureka/
+    registerWithEureka: false
+    fetchRegistry: false
