--- a/cloud-zjx-eureka-cluster/src/main/resources/application-peer2.yml
+++ b/cloud-zjx-eureka-cluster/src/main/resources/application-peer2.yml
@@ -9,3 +9,5 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://peer1:8761/eureka/
+    registerWithEureka: false
+    fetchRegistry: false
