--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,10 @@
 		<module>cloud-zjx-provider-hi</module>
 		<module>cloud-zjx-hystrix-dashboard</module>
 		<module>cloud-zjx-turbine</module>
-        <module>cloud-zjx-gateway</module>
+        <module>cloud-zjx-gateway-first</module>
+        <module>cloud-zjx-gateway-predict</module>
+        <module>cloud-zjx-gateway-filter</module>
+        <module>cloud-zjx-gateway-ratelimit</module>
   </modules>
 
     <properties>
@@ -45,15 +48,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
         </dependency>
     </dependencies>
 
