--- a/cloud-zjx-feign/src/main/resources/application.yml
+++ b/cloud-zjx-feign/src/main/resources/application.yml
@@ -9,6 +9,8 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka
+  instance:
+    prefer-ip-address: true
 
 #Feign是自带断路器的，在D版本的Spring Cloud之后，它没有默认打开
 feign:
