--- a/cloud-zjx-provider/src/main/resources/application.yml
+++ b/cloud-zjx-provider/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8763
+  port: 8762
 
 spring:
   application:
@@ -12,3 +12,5 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka
+  instance:
+    prefer-ip-address: true
