--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.1.RELEASE</version>
+        <version>2.1.2.RELEASE</version>
         <relativePath/>
     </parent>
 
@@ -31,23 +31,36 @@
 		<module>cloud-zjx-provider-hi</module>
 		<module>cloud-zjx-hystrix-dashboard</module>
 		<module>cloud-zjx-turbine</module>
+
         <module>cloud-zjx-gateway-first</module>
         <module>cloud-zjx-gateway-predict</module>
         <module>cloud-zjx-gateway-filter</module>
         <module>cloud-zjx-gateway-ratelimit</module>
+
+        <module>cloud-zjx-txlcn</module>
+        <module>cloud-zjx-txlcn-tm</module>
+        <module>cloud-zjx-txlcn-serviceA</module>
+        <module>cloud-zjx-txlcn-serviceB</module>
+        <module>cloud-zjx-txlcn-serviceC</module>
+
   </modules>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
-        <spring-cloud.version>Finchley.SR1</spring-cloud.version>
+        <spring-cloud.version>Greenwich.RELEASE</spring-cloud.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
         </dependency>
     </dependencies>
 
