--- a/cloud-zjx-gateway-ratelimit/pom.xml
+++ b/cloud-zjx-gateway-ratelimit/pom.xml
@@ -29,6 +29,11 @@
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis-reactive</artifactId>
         </dependency>
     </dependencies>
