--- a/cloud-zjx-gateway-ratelimit/src/main/resources/application.yml
+++ b/cloud-zjx-gateway-ratelimit/src/main/resources/application.yml
@@ -14,10 +14,11 @@ spring:
           filters:
             - name: RequestRateLimiter
               args:
-                key-resolver: '#{@hostAddrKeyResolver}'   #用于限流的键的解析器的Bean对象的名字，从 Spring 容器中获取 Bean 对象
+                key-resolver: '#{@userKeyResolver}'   #用于限流的键的解析器的Bean对象的名字，从 Spring 容器中获取 Bean 对象
                 redis-rate-limiter.replenishRate: 1   #令牌桶每秒填充平均速率
                 redis-rate-limiter.burstCapacity: 3   #令牌桶总容量
   redis:
-    host: localhost
+    host: 192.168.160.128
     port: 6379
     database: 0
+    password: zjx123
