--- a/cloud-zjx-seata-commodity/src/main/resources/application.yml
+++ b/cloud-zjx-seata-commodity/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
 
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
-    url: jdbc:mysql://192.168.160.128:3306/seata?useUnicode=true&characterEncoding=UTF-8&useSSL=false
+    url: jdbc:mysql://192.168.160.128:3306/db_commodity?useUnicode=true&characterEncoding=UTF-8&useSSL=false
     driver-class-name: com.mysql.jdbc.Driver
     username: root
     password: zjx123
